[gd_scene load_steps=13 format=3 uid="uid://db71podd0qxlo"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_bp5fs"]
[ext_resource type="FontFile" uid="uid://b8pgs6kfymiej" path="res://Fonts/Geo/Geo-Regular.ttf" id="2_2jkyl"]
[ext_resource type="Texture2D" uid="uid://bkuff63u3yq76" path="res://Sprites/pilot.png" id="3_i1tn8"]
[ext_resource type="Texture2D" uid="uid://bojoei0fdvmqt" path="res://Sprites/pilot_hurt.png" id="3_iirr5"]
[ext_resource type="Texture2D" uid="uid://c1w2g3kv1lv11" path="res://Sprites/heath bar/hp_bar_under.png" id="5_pa71n"]
[ext_resource type="Texture2D" uid="uid://clh7cbhfffc55" path="res://Sprites/heath bar/hp_bar_progress.png" id="6_wcght"]
[ext_resource type="Texture2D" uid="uid://ccvlc3uf7crcd" path="res://Sprites/special/special_bar_under.png" id="7_504ct"]
[ext_resource type="Texture2D" uid="uid://blavg3lgmbh25" path="res://Sprites/special/special_bar_progress.png" id="8_cj01t"]

[sub_resource type="Animation" id="Animation_ifu2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(59, 44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_i1tn8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m1q76"]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.253278, 1, 0.414357, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_i1tn8")]
}

[sub_resource type="Animation" id="Animation_5x6ps"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(59, 44), Vector2(55, 35), Vector2(59, 44), Vector2(55, 35), Vector2(59, 44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_i1tn8"), ExtResource("3_iirr5"), ExtResource("3_i1tn8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.156863, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0twxk"]
_data = {
"RESET": SubResource("Animation_ifu2k"),
"heal": SubResource("Animation_m1q76"),
"shake": SubResource("Animation_5x6ps")
}

[node name="user_interface" type="CanvasLayer"]
layer = 128

[node name="gui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bp5fs")

[node name="score" type="Label" parent="gui"]
texture_filter = 1
layout_mode = 1
offset_left = 15.0
offset_top = 76.0
offset_right = 95.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2jkyl")
theme_override_font_sizes/font_size = 20
text = "Score: 0"

[node name="pilot" type="Sprite2D" parent="gui"]
texture_filter = 1
position = Vector2(59, 44)
texture = ExtResource("3_i1tn8")

[node name="AnimationTree" type="AnimationPlayer" parent="gui/pilot"]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_0twxk")
}

[node name="health_bar" type="TextureProgressBar" parent="gui"]
texture_filter = 1
layout_mode = 0
offset_left = 11.0
offset_top = 99.0
offset_right = 156.0
offset_bottom = 139.0
value = 100.0
rounded = true
texture_under = ExtResource("5_pa71n")
texture_progress = ExtResource("6_wcght")
texture_progress_offset = Vector2(33, 0)

[node name="special" type="TextureProgressBar" parent="gui"]
texture_filter = 1
layout_mode = 0
offset_left = 11.0
offset_top = 121.0
offset_right = 156.0
offset_bottom = 161.0
scale = Vector2(1, 0.320004)
max_value = 500.0
step = 0.1
texture_under = ExtResource("7_504ct")
texture_progress = ExtResource("8_cj01t")

[connection signal="shake_pilot" from="gui" to="gui" method="_shake_pilot_profile"]
[connection signal="update_player_health" from="gui" to="gui" method="_on_update_player_health"]
[connection signal="update_score" from="gui" to="gui" method="_on_update_score"]
